# template-python

./: MANIFEST.in  Makefile  pyproject.toml
