[build-system]
requires = ["setuptools >= 61.0", "wheel >= 0.40.0", "build >= 0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
description = "Template for Python projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name="ckirua", email="paektec@gmail.com" }
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pytemplate.__about__.__version__"}

[tool.setuptools]
include-package-data = true
packages = ["pytemplate"]
